<?xml version="1.0"?>
<package format="2">
  <name>robots</name>
  <version>0.0.0</version>
  <description>Demo package that creates two turtles</description>

  <maintainer email="gder-korepanov@yandex.ru">Desen123</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robots</url> -->


  <author email="gder-korepanov@yandex.ru">Desen123</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>turtlesim</build_export_depend>
  
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
